--- a/app/src/main/res/layout/activity_point_of_interest_list.xml
+++ b/app/src/main/res/layout/activity_point_of_interest_list.xml
@@ -32,6 +32,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_poi_list"
+            android:layout_above="@+id/iv_poi_list_powered_by_google"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -39,6 +40,7 @@
             android:id="@+id/iv_poi_list_powered_by_google"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/powered_by_google_logo_margin"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
             android:src="@drawable/powered_by_google_light" />
