Fix lint issues for all the alyouts

--- a/app/src/main/res/layout/activity_point_of_interest_detail.xml
+++ b/app/src/main/res/layout/activity_point_of_interest_detail.xml
@@ -21,9 +21,9 @@
             android:id="@+id/tv_poi_detail_pb_text_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
             android:layout_gravity="center"
             android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
+            android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
             android:fontFamily="sans-serif"
             android:text="@string/home_progressbar_text_msg"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -47,33 +47,36 @@
                 android:id="@+id/tv_poi_detail_place_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/iv_poi_detail_image"
                 android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                 android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_below="@+id/iv_poi_detail_image"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textIsSelectable="true"
                 tools:text="The Place Name" />
 
             <TextView
                 android:id="@+id/tv_poi_detail_place_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_poi_detail_place_name"
                 android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                 android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_below="@+id/tv_poi_detail_place_name"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textIsSelectable="true"
                 tools:text="The Place Address" />
 
             <TextView
                 android:id="@+id/tv_poi_detail_place_rating_Value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                 android:layout_below="@+id/tv_poi_detail_place_address"
+                android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/colorAccent"
+                android:textIsSelectable="true"
                 tools:text="4.9" />
 
             <RatingBar
@@ -81,29 +84,30 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_poi_detail_place_address"
                 android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                 android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_below="@+id/tv_poi_detail_place_address"
                 android:layout_marginStart="@dimen/poi_list_left_rating_bar_padding"
-                android:layout_toRightOf="@+id/tv_poi_detail_place_rating_Value" />
+                android:layout_toEndOf="@+id/tv_poi_detail_place_rating_Value" />
 
             <TextView
                 android:id="@+id/rb_poi_detail_user_review"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_poi_detail_place_rating_Value"
                 android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
                 android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_below="@+id/tv_poi_detail_place_rating_Value"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textIsSelectable="true"
                 tools:text="This space is for adding user review which will be done later, still thinking whether to go with recyclerview or not" />
 
             <LinearLayout
                 android:id="@+id/poi_detail_nearby_linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
                 android:layout_below="@+id/rb_poi_detail_user_review"
+                android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
                 android:gravity="bottom"
                 android:orientation="vertical">
 
@@ -115,31 +119,35 @@
 
                     <Button
                         android:id="@+id/bt_nearby_restaurant"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/home_nearby_bottom_padding"
                         android:layout_weight="1"
                         android:background="@color/color_white"
-                        android:drawableLeft="@drawable/tinru_restaurant_icon"
+                        android:drawableStart="@drawable/tinru_restaurant_icon"
                         android:elevation="@dimen/button_elevation"
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:text="@string/home_activity_layout_nearby_restaurant"
-                        android:textAllCaps="false" />
+                        android:textAllCaps="false"
+                        tools:targetApi="lollipop" />
 
                     <Button
                         android:id="@+id/bt_nearby_cafe"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/home_nearby_bottom_padding"
                         android:layout_weight="1"
                         android:background="@color/color_white"
-                        android:drawableLeft="@drawable/tinru_cafe_icon"
+                        android:drawableStart="@drawable/tinru_cafe_icon"
                         android:elevation="@dimen/button_elevation"
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:text="@string/home_activity_layout_nearby_cafe"
-                        android:textAllCaps="false" />
+                        android:textAllCaps="false"
+                        tools:targetApi="lollipop" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -150,31 +158,35 @@
 
                     <Button
                         android:id="@+id/bt_nearby_bar"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/home_nearby_bottom_padding"
                         android:layout_weight="1"
                         android:background="@color/color_white"
-                        android:drawableLeft="@drawable/tinru_bar_icon"
+                        android:drawableStart="@drawable/tinru_bar_icon"
                         android:elevation="@dimen/button_elevation"
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:text="@string/home_activity_layout_nearby_bar"
-                        android:textAllCaps="false" />
+                        android:textAllCaps="false"
+                        tools:targetApi="lollipop" />
 
                     <Button
                         android:id="@+id/bt_nearby_atm"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/home_nearby_bottom_padding"
                         android:layout_weight="1"
                         android:background="@color/color_white"
-                        android:drawableLeft="@drawable/tinru_atm_icon"
+                        android:drawableStart="@drawable/tinru_atm_icon"
                         android:elevation="@dimen/button_elevation"
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:text="@string/home_activity_layout_nearby_atm"
-                        android:textAllCaps="false" />
+                        android:textAllCaps="false"
+                        tools:targetApi="lollipop" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -185,47 +197,47 @@
 
                     <Button
                         android:id="@+id/bt_nearby_shopping"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/home_nearby_bottom_padding"
                         android:layout_weight="1"
                         android:background="@color/color_white"
-                        android:drawableLeft="@drawable/tinru_shopping_icon"
+                        android:drawableStart="@drawable/tinru_shopping_icon"
                         android:elevation="@dimen/button_elevation"
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:text="@string/home_activity_layout_nearby_shopping"
-                        android:textAllCaps="false" />
+                        android:textAllCaps="false"
+                        tools:targetApi="lollipop" />
 
                     <Button
                         android:id="@+id/bt_nearby_petrol_pump"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_margin="@dimen/home_nearby_bottom_padding"
                         android:layout_weight="1"
                         android:background="@color/color_white"
-                        android:drawableLeft="@drawable/tinru_petrol_pump_icon"
+                        android:drawableStart="@drawable/tinru_petrol_pump_icon"
                         android:elevation="@dimen/button_elevation"
                         android:foreground="?attr/selectableItemBackgroundBorderless"
                         android:text="@string/home_activity_layout_nearby_petrol_pump"
-                        android:textAllCaps="false" />
+                        android:textAllCaps="false"
+                        tools:targetApi="lollipop" />
                 </LinearLayout>
             </LinearLayout>
+
             <ImageView
                 android:id="@+id/iv_poi_detail_powered_by_google"
-                android:layout_margin="@dimen/powered_by_google_logo_margin"
-                android:layout_below="@+id/poi_detail_nearby_linear_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/poi_detail_nearby_linear_layout"
                 android:layout_centerInParent="true"
+                android:layout_margin="@dimen/powered_by_google_logo_margin"
+                android:contentDescription="@string/google_powered_by_image_content_desc"
                 android:src="@drawable/powered_by_google_light" />
         </RelativeLayout>
-        <!--<ImageView-->
-            <!--android:id="@+id/iv_poi_detail_powered_by_google"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center|bottom"-->
-            <!--android:src="@drawable/powered_by_google_light" />-->
     </FrameLayout>
 </ScrollView>
