--- a/app/src/main/res/layout/activity_flight_list.xml
+++ b/app/src/main/res/layout/activity_flight_list.xml
@@ -38,7 +38,8 @@
             android:layout_margin="@dimen/material_design_phone_grid_layout_margin"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            tools:text="London to Kolkata" />
+            tools:text="London to Kolkata"
+            android:textIsSelectable="true" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_flight_list"
