--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,19 +10,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="visible"/>
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/tv_progressbar_text_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
         android:layout_gravity="center"
-        android:fontFamily="sans-serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_marginBottom="@dimen/material_design_phone_grid_layout_margin"
+        android:layout_marginTop="@dimen/progressbar_text_msg_top_margin"
+        android:fontFamily="sans-serif"
         android:text="@string/home_progressbar_text_msg"
-        android:visibility="visible"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/home_activity_linear_layout"
@@ -49,14 +49,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/black_color_opacity_10"
-                android:paddingBottom="@dimen/material_design_phone_grid_layout_margin"
-                android:paddingLeft="@dimen/material_design_phone_grid_layout_margin"
-                android:paddingTop="@dimen/material_design_phone_grid_layout_margin"
-                android:text="Kolkata, India"
                 android:fontFamily="sans-serif"
+                android:paddingBottom="@dimen/material_design_phone_grid_layout_margin"
+                android:paddingEnd="@dimen/material_design_phone_grid_layout_margin"
+                android:paddingStart="@dimen/material_design_phone_grid_layout_margin"
+                android:paddingTop="@dimen/material_design_phone_grid_layout_margin"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/color_white"
-                tools:text="London, UK"/>
+                android:textIsSelectable="true"
+                tools:text="London, UK" />
 
             <Button
                 android:id="@+id/bt_location_search"
@@ -65,11 +66,12 @@
                 android:layout_gravity="bottom|center"
                 android:layout_marginBottom="@dimen/home_search_button_bottom_padding"
                 android:alpha=".8"
-                android:drawableLeft="@drawable/tinru_search_icon"
-                android:elevation="@dimen/button_elevation"
                 android:drawablePadding="@dimen/home_search_button_drawable_padding"
+                android:drawableStart="@drawable/tinru_search_icon"
+                android:elevation="@dimen/button_elevation"
                 android:text="@string/home_activity_layout_search_button_text"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                tools:targetApi="lollipop" />
         </FrameLayout>
 
         <LinearLayout
@@ -88,31 +90,35 @@
 
                 <Button
                     android:id="@+id/bt_nearby_restaurant"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/home_nearby_bottom_padding"
                     android:layout_weight="1"
                     android:background="@color/color_white"
-                    android:drawableLeft="@drawable/tinru_restaurant_icon"
+                    android:drawableStart="@drawable/tinru_restaurant_icon"
                     android:elevation="@dimen/button_elevation"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:text="@string/home_activity_layout_nearby_restaurant"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    tools:targetApi="lollipop" />
 
                 <Button
                     android:id="@+id/bt_nearby_cafe"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/home_nearby_bottom_padding"
                     android:layout_weight="1"
                     android:background="@color/color_white"
-                    android:drawableLeft="@drawable/tinru_cafe_icon"
+                    android:drawableStart="@drawable/tinru_cafe_icon"
                     android:elevation="@dimen/button_elevation"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:text="@string/home_activity_layout_nearby_cafe"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    tools:targetApi="lollipop" />
             </LinearLayout>
 
             <LinearLayout
@@ -123,31 +129,35 @@
 
                 <Button
                     android:id="@+id/bt_nearby_bar"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/home_nearby_bottom_padding"
                     android:layout_weight="1"
                     android:background="@color/color_white"
-                    android:drawableLeft="@drawable/tinru_bar_icon"
+                    android:drawableStart="@drawable/tinru_bar_icon"
                     android:elevation="@dimen/button_elevation"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:text="@string/home_activity_layout_nearby_bar"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    tools:targetApi="lollipop" />
 
                 <Button
                     android:id="@+id/bt_nearby_atm"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/home_nearby_bottom_padding"
                     android:layout_weight="1"
                     android:background="@color/color_white"
-                    android:drawableLeft="@drawable/tinru_atm_icon"
+                    android:drawableStart="@drawable/tinru_atm_icon"
                     android:elevation="@dimen/button_elevation"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:text="@string/home_activity_layout_nearby_atm"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    tools:targetApi="lollipop" />
             </LinearLayout>
 
             <LinearLayout
@@ -158,55 +168,53 @@
 
                 <Button
                     android:id="@+id/bt_nearby_shopping"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/home_nearby_bottom_padding"
                     android:layout_weight="1"
                     android:background="@color/color_white"
-                    android:drawableLeft="@drawable/tinru_shopping_icon"
+                    android:drawableStart="@drawable/tinru_shopping_icon"
                     android:elevation="@dimen/button_elevation"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:text="@string/home_activity_layout_nearby_shopping"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    tools:targetApi="lollipop" />
 
                 <Button
                     android:id="@+id/bt_nearby_petrol_pump"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/home_nearby_bottom_padding"
                     android:layout_weight="1"
                     android:background="@color/color_white"
-                    android:drawableLeft="@drawable/tinru_petrol_pump_icon"
+                    android:drawableStart="@drawable/tinru_petrol_pump_icon"
                     android:elevation="@dimen/button_elevation"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     android:text="@string/home_activity_layout_nearby_petrol_pump"
-                    android:textAllCaps="false" />
+                    android:textAllCaps="false"
+                    tools:targetApi="lollipop" />
             </LinearLayout>
         </LinearLayout>
+
         <ImageView
             android:id="@+id/iv_home_powered_by_google"
-            android:layout_marginBottom="@dimen/powered_by_google_logo_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/powered_by_google_logo_margin"
+            android:contentDescription="@string/google_powered_by_image_content_desc"
             android:src="@drawable/powered_by_google_light" />
     </LinearLayout>
-
-    <!--<ImageView-->
-        <!--android:id="@+id/iv_poi_detail_powered_by_google"-->
-        <!--android:layout_margin="@dimen/material_design_phone_grid_layout_margin"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center|bottom"-->
-        <!--android:src="@drawable/powered_by_google_light" />-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:src="@drawable/tinru_fab_search"
-        android:layout_margin="@dimen/fab_margin" />
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/tinru_fab_search" />
 </FrameLayout>
