--- a/app/src/main/res/layout/single_nearby_card_item.xml
+++ b/app/src/main/res/layout/single_nearby_card_item.xml
@@ -31,32 +31,38 @@
             android:id="@+id/tv_single_nearby_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:paddingStart="@dimen/single_nearby_item_text_padding"
+            android:paddingEnd="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/iv_single_nearby_image"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            tool:text="Nearby item Name" />
+            tool:text="Nearby item Name"
+            android:textIsSelectable="true" />
 
         <TextView
             android:id="@+id/tv_single_nearby_vicinity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:paddingRight="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_name"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            tool:text="Prince Regent Street, Hounslow" />
+            tool:text="Prince Regent Street, Hounslow"
+            android:textIsSelectable="true" />
 
         <TextView
             android:id="@+id/tv_single_nearby_rating_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:paddingRight="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_vicinity"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textColor="@color/colorAccent"
-            tool:text="4.6" />
+            tool:text="4.6"
+            android:textIsSelectable="true" />
 
         <RatingBar
             android:id="@+id/rb_single_nearby_rating"
@@ -64,8 +70,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:paddingRight="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_vicinity"
-            android:layout_toRightOf="@+id/tv_single_nearby_rating_value"
+            android:layout_toEndOf="@+id/tv_single_nearby_rating_value"
             android:numStars="5"
             android:stepSize="0.1" />
 
@@ -74,9 +81,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/single_nearby_item_text_padding"
+            android:paddingRight="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_rating_value"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            tool:text="Open now" />
+            tool:text="Open now"
+            android:textIsSelectable="true" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
