Add RTL support

--- a/app/src/main/res/layout/single_nearby_card_item.xml
+++ b/app/src/main/res/layout/single_nearby_card_item.xml
@@ -43,8 +43,8 @@
             android:id="@+id/tv_single_nearby_vicinity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/single_nearby_item_text_padding"
-            android:paddingRight="@dimen/single_nearby_item_text_padding"
+            android:paddingStart="@dimen/single_nearby_item_text_padding"
+            android:paddingEnd="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_name"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -55,8 +55,8 @@
             android:id="@+id/tv_single_nearby_rating_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/single_nearby_item_text_padding"
-            android:paddingRight="@dimen/single_nearby_item_text_padding"
+            android:paddingStart="@dimen/single_nearby_item_text_padding"
+            android:paddingEnd="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_vicinity"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -69,8 +69,8 @@
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/single_nearby_item_text_padding"
-            android:paddingRight="@dimen/single_nearby_item_text_padding"
+            android:paddingStart="@dimen/single_nearby_item_text_padding"
+            android:paddingEnd="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_vicinity"
             android:layout_toEndOf="@+id/tv_single_nearby_rating_value"
             android:numStars="5"
@@ -80,8 +80,8 @@
             android:id="@+id/tv_single_nearby_open_close_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/single_nearby_item_text_padding"
-            android:paddingRight="@dimen/single_nearby_item_text_padding"
+            android:paddingStart="@dimen/single_nearby_item_text_padding"
+            android:paddingEnd="@dimen/single_nearby_item_text_padding"
             android:layout_below="@+id/tv_single_nearby_rating_value"
             android:fontFamily="sans-serif"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
