--- a/app/src/main/res/layout/activity_point_of_interest_detail.xml
+++ b/app/src/main/res/layout/activity_point_of_interest_detail.xml
@@ -48,8 +48,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/iv_poi_detail_image"
-                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
+                android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
+                android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textIsSelectable="true"
@@ -60,8 +60,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_poi_detail_place_name"
-                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
+                android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
+                android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textIsSelectable="true"
@@ -85,8 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_poi_detail_place_address"
-                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
+                android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
                 android:layout_marginStart="@dimen/poi_list_left_rating_bar_padding"
                 android:layout_toEndOf="@+id/tv_poi_detail_place_rating_Value" />
 
@@ -95,8 +94,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_poi_detail_place_rating_Value"
-                android:layout_marginLeft="@dimen/material_design_phone_grid_layout_margin"
-                android:layout_marginRight="@dimen/material_design_phone_grid_layout_margin"
+                android:layout_marginStart="@dimen/material_design_phone_grid_layout_margin"
+                android:layout_marginEnd="@dimen/material_design_phone_grid_layout_margin"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textIsSelectable="true"
